# pco2box

./: LICENSE  README.md  pyproject.toml
oceanbox/: __init__.py  reuerflux.py  stload.py  wind2pv.py
pco2box/: __init__.py  figures.py  model.py  model.py~  recovery.py  recovery.py~  timeseries.py  timeseries.py~
pco2box/indata/: merc_uscoast_latlon.npz  mercator_tseries.h5  mercator_us_coasts_tseries.npz
tests/: test_model.py
