[tool.poetry]
name = "pco2box"
version = "1.0"
description = "Box model simulating carbon solubility and air-sea exchange in the ocean"
authors = ["Bror Jonsson <brorfred@gmail.com>"]
license = "MIT"
packages = [
    { include = "oceanbox" },
    { include = "pco2box" },
]


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
co2sys = "^0.1.1"
pandas = "^0.25.3"
matplotlib = "^3.1"
seawater = "^3.3"
seaborn = "^0.9.0"
#cartopy = "^0.17.0"

tables = "^3.6"
[tool.poetry.dev-dependencies]
ipython = "^7.9"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
